<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_baseline_person_24" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="17dp"
        app:layout_constraintBottom_toTopOf="@+id/text_input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="UnknownId">

        <EditText
            android:id="@+id/login_editt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="no"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@+id/text_input_email"
        app:layout_constraintStart_toStartOf="@+id/text_input_email"
        app:layout_constraintTop_toBottomOf="@+id/text_input_email"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password_editt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="298dp"
        android:layout_height="69dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password">

        <Button
            android:id="@+id/logging"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/Login"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />
        <Button
            android:id="@+id/singingup"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorAccent"
            android:textSize="12sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/Forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:hint="@string/forget_password"
        android:textColor="#F44336"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
<TextView
    android:id="@+id/Therapist"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=" Apply as a Therapist"
    android:layout_gravity="center"
    android:textSize="20sp"
    android:layout_marginTop="20dp"
    />
</LinearLayout>
